--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,122 @@
-python-telegram-bot==20.7
-mistralai==0.0.7
-langchain==0.1.0
-chromadb==0.4.22
-python-dotenv==1.0.0
-python-docx-template==0.5.2
-huggingface-hub==0.20.3
-flask==2.3.2
-gunicorn==20.1.0
+aiohappyeyeballs>=2.4.4
+aiohttp>=3.11.11
+aiosignal>=1.3.2
+annotated-types>=0.7.0
+anyio>=4.8.0
+asgiref>=3.8.1
+attrs>=24.3.0
+babel>=2.16.0
+backoff>=2.2.1
+bcrypt>=4.2.1
+blinker>=1.9.0
+build>=1.2.2.post1
+cachetools>=5.5.0
+certifi>=2024.12.14
+charset-normalizer>=3.4.1
+chroma-hnswlib>=0.7.3
+chromadb>=0.4.22
+click>=8.1.8
+coloredlogs>=15.0.1
+dataclasses-json>=0.6.7
+Deprecated>=1.2.15
+docxcompose>=1.4.0
+docxtpl>=0.16.4
+durationpy>=0.9
+fastapi>=0.115.6
+filelock>=3.16.1
+Flask>=2.3.2
+flatbuffers>=24.12.23
+frozenlist>=1.5.0
+fsspec>=2024.12.0
+google-auth>=2.37.0
+googleapis-common-protos>=1.66.0
+grpcio>=1.69.0
+gunicorn>=20.1.0
+h11>=0.14.0
+httpcore>=1.0.7
+httptools>=0.6.4
+httpx>=0.25.2
+huggingface-hub>=0.20.3
+humanfriendly>=10.0
+idna>=3.10
+importlib_metadata>=8.5.0
+importlib_resources>=6.5.2
+itsdangerous>=2.2.0
+Jinja2>=3.1.5
+jsonpatch>=1.33
+jsonpointer>=3.0.0
+kubernetes>=31.0.0
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-core>=0.1.23
+langsmith>=0.0.87
+lxml>=5.3.0
+markdown-it-py>=3.0.0
+MarkupSafe>=3.0.2
+marshmallow>=3.25.1
+mdurl>=0.1.2
+mistralai>=0.0.7
+mmh3>=5.0.1
+monotonic>=1.6
+mpmath>=1.3.0
+multidict>=6.1.0
+mypy-extensions>=1.0.0
+numpy>=1.26.4
+oauthlib>=3.2.2
+onnxruntime>=1.20.1
+opentelemetry-api>=1.29.0
+opentelemetry-exporter-otlp-proto-common>=1.29.0
+opentelemetry-exporter-otlp-proto-grpc>=1.29.0
+opentelemetry-instrumentation>=0.50b0
+opentelemetry-instrumentation-asgi>=0.50b0
+opentelemetry-instrumentation-fastapi>=0.50b0
+opentelemetry-proto>=1.29.0
+opentelemetry-sdk>=1.29.0
+opentelemetry-semantic-conventions>=0.50b0
+opentelemetry-util-http>=0.50b0
+orjson>=3.10.15
+overrides>=7.7.0
+packaging>=23.2
+posthog>=3.8.3
+propcache>=0.2.1
+protobuf>=5.29.3
+pulsar-client>=3.5.0
+pyasn1>=0.6.1
+pyasn1_modules>=0.4.1
+pydantic>=2.10.5
+pydantic_core>=2.27.2
+Pygments>=2.19.1
+PyPika>=0.48.9
+pyproject_hooks>=1.2.0
+python-dateutil>=2.9.0.post0
+python-docx>=1.1.2
+python-dotenv>=1.0.0
+python-telegram-bot>=20.7
+PyYAML>=6.0.2
+requests>=2.32.3
+requests-oauthlib>=2.0.0
+rich>=13.9.4
+rsa>=4.9
+setuptools>=75.8.0
+shellingham>=1.5.4
+six>=1.17.0
+sniffio>=1.3.1
+SQLAlchemy>=2.0.37
+starlette>=0.41.3
+sympy>=1.13.3
+tenacity>=8.5.0
+tokenizers>=0.21.0
+tqdm>=4.67.1
+typer>=0.15.1
+typing-inspect>=0.9.0
+typing_extensions>=4.12.2
+urllib3>=2.3.0
+uvicorn>=0.34.0
+uvloop>=0.21.0
+watchfiles>=1.0.4
+websocket-client>=1.8.0
+websockets>=14.2
+Werkzeug>=3.1.3
+wrapt>=1.17.2
+yarl>=1.18.3
+zipp>=3.21.0
